# AdventOfCode2024

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  setup_day.sh
.github/workflows/: cmake-single-platform.yml
0/: CMakeLists.txt
0/inc/: template.hpp
0/resources/: data.txt
0/src/: main.cpp  template.cpp
0/tests/: test_day_0.cpp
1/: CMakeLists.txt  historian_hysteria.cpp
1/inc/: historian_hysteria.hpp
1/src/: historian_hysteria.cpp  historian_hysteria_p2.cpp  main.cpp
1/tests/: test_day_1.cpp
10/: CMakeLists.txt  hoof_it.cpp
10/src/: hoof_it.cpp  main.cpp
10/tests/: test_day_10.cpp
11/: CMakeLists.txt  plutonian_pebbles.cpp
11/src/: main.cpp  plutionian_pebbles.cpp
11/tests/: test_day_11.cpp
12/: CMakeLists.txt  garden_groups.cpp
12/src/: garden_groups.cpp  main.cpp
12/tests/: test_day_12.cpp
13/: CMakeLists.txt  claw_contraption.cpp  str_to_machine_helper.cpp  str_to_machine_helper.hpp
13/inc/: str_to_machine_helper.hpp
13/src/: claw_contraption.cpp  main.cpp  str_to_machine_helper.cpp
13/tests/: test_day_13.cpp
14/: CMakeLists.txt  restroom_doubt.cpp
14/src/: main.cpp  restroom_doubt.cpp
14/tests/: test_day_14.cpp
15/: CMakeLists.txt
15/inc/: file_helpers_day_15.hpp
15/src/: file_helpers_day_15.cpp  main.cpp  warehouse_woes.cpp
15/tests/: test_day_15.cpp
16/: CMakeLists.txt
16/inc/: file_helpers_day_16.hpp
16/src/: file_helpers_day_16.cpp  main.cpp  reindeer_maze.cpp
16/tests/: test_day_16.cpp
17/: CMakeLists.txt
17/inc/: chronospatial_computer.hpp
17/src/: chronospatial_computer.cpp  main.cpp
17/tests/: test_day_17.cpp
18/: CMakeLists.txt
18/inc/: ram_run.hpp
18/resources/: data.txt.bak
18/src/: main.cpp  ram_run.cpp
18/tests/: test_day_18.cpp
19/: CMakeLists.txt
19/src/: linean_layout.cpp  main.cpp
19/tests/: test_day_19.cpp
2/: CMakeLists.txt  red-nosed_report.cpp  red-nosed_report_p2.cpp
2/inc/: red-nosed_report.hpp
2/src/: main.cpp  red-nosed_report.cpp
2/tests/: test_day_2.cpp
20/: CMakeLists.txt
20/src/: main.cpp  race_condition.cpp
20/tests/: test_day_20.cpp
22/: CMakeLists.txt
22/src/: main.cpp  monkey_market.cpp
22/tests/: test_day_22.cpp
23/: CMakeLists.txt
23/inc/: lan_party.hpp
23/src/: lan_party.cpp  main.cpp
23/tests/: test_day_23.cpp
24/: CMakeLists.txt
24/src/: crossed_wires.cpp  main.cpp
24/tests/: test_day_24.cpp
25/: CMakeLists.txt
25/inc/: code_chronicle.hpp
25/src/: code_chronicle.cpp  main.cpp
25/tests/: test_day_25.cpp
3/: CMakeLists.txt  mull_it_over.cpp  training_data.txt
3/src/: main.cpp  mull_it_over.cpp
3/tests/: test_day_3.cpp
4/: CMakeLists.txt  ceres_search.cpp
4/src/: ceres_search.cpp  main.cpp
4/tests/: test_day_4.cpp
5/: CMakeLists.txt  print_queue.cpp
5/src/: main.cpp  print_queue.cpp
5/tests/: test_day_5.cpp
6/: CMakeLists.txt  guard_gallivand  guard_gallivand.cpp
6/src/: guard_gallivand.cpp  main.cpp
6/tests/: test_day_6.cpp
7/: CMakeLists.txt  bridge_repair.cpp
7/src/: bridge_repair.cpp  main.cpp
7/tests/: test_day_7.cpp
8/: CMakeLists.txt  resonant_collinearity.cpp
8/src/: main.cpp  resonant_collinearity.cpp
8/tests/: test_day_8.cpp
9/: CMakeLists.txt  disk_fragmenter.cpp
9/src/: disk_fragmenter.cpp  main.cpp
9/tests/: test_day_9.cpp
cmake/: copy_data_file.cmake  day_setup.cmake
lib/: CMakeLists.txt
lib/inc/: coordinates.hpp  file_helpers.hpp
lib/src/: file_helpers.cpp
