add_library(day_1_lib STATIC src/historian_hysteria.cpp)
target_include_directories(day_1_lib PUBLIC inc)
target_link_libraries(day_1_lib PRIVATE file_helpers)

if (NOT ENABLE_TESTS)
  add_executable(day_1 src/main.cpp)
  copy_data_file(day_1 ${CMAKE_CURRENT_SOURCE_DIR}/resources/data.txt)
  target_link_libraries(day_1 PRIVATE day_1_lib file_helpers)
else()
  add_executable(test_day_1 tests/test_day_1.cpp)
  target_link_libraries(test_day_1 PRIVATE day_1_lib file_helpers gtest gtest_main)
  copy_data_file(test_day_1 ${CMAKE_CURRENT_SOURCE_DIR}/resources/data.txt)
  add_test(NAME test_day_1 COMMAND $<TARGET_FILE:test_day_1>)
endif()
